Fix crash on adding new managed user.

Test: Manually
Bug: 835911
Change-Id: Id2942cb8249003e52b7147c924db6e5785b79a51
Reviewed-on: https://chromium-review.googlesource.com/1024408
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Yury Khmel <khmel@google.com>
Cr-Commit-Position: refs/heads/master@{#552820}
Former-commit-id: c42e1e9e3391fd9e97fdb99f9434c68c475e5d8e